Increase min-height of comparison table to avoid dropdown cutoff

--- a/src/App.scss
+++ b/src/App.scss
@@ -160,6 +160,7 @@
   .drift-table-wrapper {
     overflow: auto;
     height: 100%;
+    min-height: 500px;
     margin-left: 24px;
     margin-right: 24px;
   }
